--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
-  "name": "easy-test",
+  "name": "simple-test-of-fate",
   "version": "0.0.1",
   "description": "a straightforward testing framework for node.js",
   "main": "index.js",
+  "keywords": [
+    "test",
+    "simple",
+    "fate"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
